etc: Modify to base(true) is always updated